websocket enhancement
